<resources>
    <string name="app_name">My FoodPlannerApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Enter username</string>
    <string name="email">Enter Your e-mail</string>
    <string name="pass">Enter Your Password</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="play">Play</string>
    <string name="week">Weekly</string>
    <string name="ingredients">Ingredients</string>
    <string name="area">Area</string>
    <string name="category">Category</string>
    <string name="facebook_app_id">904783413981376</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="year">Feb 2023</string>
</resources>